fix: navbar and footer content aligned with main

--- a/docs/index.css
+++ b/docs/index.css
@@ -809,43 +809,52 @@ h5 {
 }
 
 .navbar {
-  flex-shrink: 0;
-  position: relative;
-  z-index: 3;
-  height: 64px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  flex-shrink: 0;
+  z-index: 3;
+  height: 64px;
   box-shadow: 0 3px 3px #0000002c;
   background-color: var(--color-bg);
 }
+
+.navbar--back .navbar-container {
+      position: relative;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      max-width: 1630px;
+    }
+
+.navbar--back .navbar-container .navbar-btn {
+        position: absolute;
+        left: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 50px;
+        height: 50px;
+        margin: 15px;
+        color: var(--color-fg);
+      }
+
+.navbar--back .navbar-container .navbar-btn::before {
+          display: inline-block;
+          font: var(--fa-font-solid);
+          font-size: 20px;
+          font-weight: 900;
+          content: "\f060";
+        }
 
 .navbar h1 {
     margin-top: 5px;
     margin-bottom: 0;
     color: var(--color-fg);
   }
-
-.navbar--back .navbar-btn {
-      position: absolute;
-      left: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 50px;
-      height: 50px;
-      margin: 15px;
-      color: var(--color-fg);
-    }
-
-.navbar--back .navbar-btn::before {
-        display: inline-block;
-        font: var(--fa-font-solid);
-        font-size: 20px;
-        font-weight: 900;
-        content: "\f060";
-      }
 
 .location {
   display: flex;
@@ -898,24 +907,29 @@ h5 {
 
 footer {
   flex-shrink: 0;
-  padding: 20px 24px 30px;
   background-color: var(--darkgrey);
   color: var(--white);
 }
 
+footer .footer-container {
+    max-width: 1630px;
+    margin: 0 auto;
+    padding: 20px 24px 30px;
+  }
+
 @media (min-width: 768px) {
 
-footer {
-    padding: 30px 48px
-}
+footer .footer-container {
+      padding: 30px 48px
   }
+    }
 
 @media (min-width: 1278px) {
 
-footer {
-    padding: 30px 64px
-}
+footer .footer-container {
+      padding: 30px 64px
   }
+    }
 
 footer h1 {
     margin: 0 0 16px;
@@ -924,7 +938,7 @@ footer h1 {
   }
 
 @media (min-width: 768px) {
-    footer .footer-container {
+    footer .footer-content {
       display: flex;
       flex-flow: row wrap;
     }
