--- a/src/styles/components/navbar.pcss
+++ b/src/styles/components/navbar.pcss
@@ -1,40 +1,49 @@
 .navbar {
-  flex-shrink: 0;
-  position: relative;
-  z-index: 3;
-  height: 64px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  flex-shrink: 0;
+  z-index: 3;
+  height: 64px;
   box-shadow: 0 3px 3px #0000002c;
   background-color: var(--color-bg);
+
+  &--back {
+    .navbar-container {
+      position: relative;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      max-width: 1630px;
+
+      .navbar-btn {
+        position: absolute;
+        left: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 50px;
+        height: 50px;
+        margin: 15px;
+        color: var(--color-fg);
+
+        &::before {
+          display: inline-block;
+          font: var(--fa-font-solid);
+          font-size: 20px;
+          font-weight: 900;
+          content: "\f060";
+        }
+      }
+    }
+  }
 
   h1 {
     margin-top: 5px;
     margin-bottom: 0;
     color: var(--color-fg);
-  }
-
-  &--back {
-    .navbar-btn {
-      position: absolute;
-      left: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 50px;
-      height: 50px;
-      margin: 15px;
-      color: var(--color-fg);
-
-      &::before {
-        display: inline-block;
-        font: var(--fa-font-solid);
-        font-size: 20px;
-        font-weight: 900;
-        content: "\f060";
-      }
-    }
   }
 }
